--- a/style.css
+++ b/style.css
@@ -6,3 +6,49 @@ html, body{
   *{
       box-sizing: border-box;
   }
+  .container{
+    display: grid;
+    background-color: lightblue;
+    resize: both;
+    overflow: auto;
+    height: 50rem;
+   grid-template-rows: repeat(12, 1fr);
+   grid-template-columns: 20% 80%;
+  }
+  .container>div{
+    border: 1px solid;
+  }
+  .header{
+    grid-row-start: 1;
+    grid-row-end: 13;
+  }
+  .sidebar{
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  .maincontent{
+    display: grid;
+    grid-row-start: 3;
+    grid-row-end: 13;
+    padding: 30px;
+    gap: 20px;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 70% 30%;
+  }
+
+  
+  .projects{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    grid-row-start: 1;
+    grid-row-end: 9;
+  }
+  .announcments{
+    grid-row-start: 1;
+    grid-row-end: 9;
+  }
+  .projects>div{
+    border: 1px solid;
+  }
