--- a/style.css
+++ b/style.css
@@ -15,18 +15,20 @@ html, body{
    grid-template-rows: repeat(12, 1fr);
    grid-template-columns: 20% 80%;
   }
-  .container>div{
-    border: 1px solid;
-  }
   .header{
+    background-color: #2390cf;
     grid-row-start: 1;
     grid-row-end: 13;
+    box-shadow: 5px 0 10px rgba(0, 0, 0, 0.8); /* Right-side shadow */
   }
   .sidebar{
+    background-color: #fffeff;
     grid-row-start: 1;
     grid-row-end: 3;
+    border-bottom: 5px solid rgba(0, 0, 0, 0.2); /* Soft shadow effect */
   }
   .maincontent{
+    background-color: #e1e7ef;
     display: grid;
     grid-row-start: 3;
     grid-row-end: 13;
@@ -48,7 +50,27 @@ html, body{
   .announcments{
     grid-row-start: 1;
     grid-row-end: 9;
+    display: flex;
+    flex-direction: column;
+  }
+  .announcments>div{
+    border-radius: 15px; 
+    background-color: #fffeff;
+    border-left-color: #eeb241;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
+              0 2px 5px rgba(0, 0, 0, 0.06); 
+  }
+  .javascript{
+    height: 60%;
+  }
+  .cssExercise{
+    height: 40%;
   }
   .projects>div{
-    border: 1px solid;
+    background-color: #fffeff;
+    border-radius: 15px;
+    border-left: 10px solid;
+    border-left-color: #eeb241;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
+              0 2px 5px rgba(0, 0, 0, 0.06);
   }
