--- a/style.css
+++ b/style.css
@@ -22,10 +22,35 @@ html, body{
     box-shadow: 5px 0 10px rgba(0, 0, 0, 0.8); /* Right-side shadow */
   }
   .sidebar{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: repeat(3, 1fr);
     background-color: #fffeff;
     grid-row-start: 1;
     grid-row-end: 3;
     border-bottom: 5px solid rgba(0, 0, 0, 0.2); /* Soft shadow effect */
+    padding: 40px;
+    gap: 20px;
+  }
+  #Search{
+    border-radius: 15px;
+    border: 0px solid;
+    outline: none;
+    background-color: #e1e7ef;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
+    0 2px 5px rgba(0, 0, 0, 0.06);
+    height: 50px;
+    padding-left: 20px;
+    position: relative;
+  }
+  .sidebar>img{
+    height: 4%;
+    position: absolute;
+    top: 55px;
+    cursor: pointer;
+  }
+  input::placeholder{
+    padding-left: 10px; 
   }
   .maincontent{
     background-color: #e1e7ef;
