--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html, body{
   }
   .sidebar{
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 60% 40%;
     grid-template-rows: repeat(3, 1fr);
     background-color: #fffeff;
     grid-row-start: 1;
@@ -98,4 +98,19 @@ html, body{
     border-left-color: #eeb241;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
               0 2px 5px rgba(0, 0, 0, 0.06);
+  }
+  .sidebarContent{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 50px;
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  .sidebarContent>img{
+    height: 60%;
+    cursor: pointer;
+  }
+  #Odin{
+    height: 80%;
   }
